# ido

./: .gitignore  Cargo.toml  README.md  log.json  progress.rs
src/: config.rs  cursive.rs  data.rs  datafiles.rs  io.rs  lib.rs  main.rs  tasks.rs  utils.rs
src/cursive/: config.rs  task.rs
