[package]
name = "ido"
version = "0.0.1"
authors = ["Tianyi Shi <ShiTianyi2001@outlook.com>"]
edition = "2018"
description = "A TUI task tracker"
license = "GPL-3.0"
documentation = "https://docs.rs/ido"
repository = "https://github.com/TianyiShi2001/ido"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.15"
chrono = {version = "0.4.15", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
time = { version = "0.2", features = ["serde"] }
config = "0.10"
directories = "3.0"
lazy_static = "1.4"